--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phase-4-rails-putting-it-all-together-auth-client",
+  "name": "phase-4-project",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5555",
@@ -11,10 +11,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0" ,
     "react-markdown": "^6.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
