--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URI=postgresql://butterfly_garden_app_vt7z_user:4iAum2ZhxxF1v8Dltvb9jTxs1thHKThV@dpg-cj02aqtgkuvvldj7o1j0-a.ohio-postgres.render.com/butterfly_garden_app_vt7z
-SESSION_KEY=@~xH\xf2\x10k\x07hp\x85\xa6N\xde\xd4\xcd
+DATABASE_URI=postgresql://my_database_n87h_user:QZ8ct2ZWPxS1QzSxt8WxspYY9b7K7EMm@dpg-cglkpg0rddlcusooanvg-a.oregon-postgres.render.com/python_speed
+SESSION_KEY= ".y\x8e`\x8c\xd2\xfd^\x8b'\xe4\xac?\xc6Y!"
