--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,26 @@
   "private": true,
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/system": "^5.14.18",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0" ,
+    "react-dom": "^18.1.0",
     "react-markdown": "^6.0.2",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
